package ucd.comp3013j.ems.model.enums;

public enum TicketType {
    PREMIUM,
    STANDARD,
    ECONOMY
} 