package ucd.comp3013j.ems.model.services;

public class VenueService {
    
}
